# openrgb-rs

./: Cargo.toml  README.md
src/: client.rs  command.rs  error.rs  lib.rs  types.rs
src/io/: mod.rs
src/network/: connection.rs  mod.rs  packet.rs
src/network/connection/: mod.rs
