[package]
name = "openrgb"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
async-trait = "0.1.36"

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio/"
features = ["tcp", "macros", "io-util"]
